# STMidi

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
STMidi/: .mxproject  CMakeLists.txt  STMidi.ioc  STMidi.map
STMidi/App/: app_run.c  app_run.h
STMidi/App/button/: button.c  button.h
STMidi/Core/Src/: main.c
STMidi/cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake/: gcc-arm-none-eabi.cmake  printf.cmake  stm32f401RE.cmake
src/app/: main.c
src/platform/: clock_setup.c  clock_setup.h  platform.c  platform.h  uart_serial_comms.c  uart_serial_comms.h
